# PIEC

./: .gitignore  DEPLOYMENT_GUIDE.md  EXACT_CHANGES.md  FILES_EDITED_IN_PR.md  FINAL_RESOLUTION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  NAVIGATION_FIX_SUMMARY.md  PATH_FOLLOWING_FIX.md  PR_FIX_SUMMARY.md  PR_SUMMARY.md  QUICK_REFERENCE.txt  README.md  SIMPLE_FIX_SUMMARY.md  TROUBLESHOOTING.md  VISUALIZATION_FIX_EXPLANATION.md  VISUAL_ORIENTATION_FIX.md  calibrate_magnetometer.py  check_imu_orientation.py  check_model.py  diagnose_frames.py  diagnose_imu.py  manual_goal_setter.py  test_imu_drift.py  test_imu_filter.py  test_mag_imu.py  test_magnetometer.py  test_pinn_integration.py  test_ukf.py  test_ukf_imu.py  validate_navigation_fix.sh
IEEE-Transactions-LaTeX2e-templates-and-instructions/: README.md  piec_tevc_paper.tex  piec_tevc_references.bib
IEEE-Transactions-LaTeX2e-templates-and-instructions/figures/: README_FIGURES.txt
config/: laser_filter.yaml  ros2_gz_bridge_config.yaml  rslidar_config.yaml
data/: README.md
data/examples/: localization_timeseries_example.csv  navigation_trials_example.csv  pinn_inference_timing_example.csv  pinn_test_predictions_example.csv  pinn_training_history_example.csv  trajectory_timeseries_example.csv
launch/: simulate_control_gazebo.launch (copy).py  simulate_control_gazebo.launch.py
models/: pinn_physics.pt
piec_data/: navigation_trials.csv  sim_PIEC_001_trajectory.csv
pinn_training/: generate_synthetic_data.py  train_pinn.py
pinn_training/models_out/: pinn_best.pt
rviz/: real_scout_display (copy).rviz  real_scout_display.rviz
scout_lidar_imu/scout_bringup/: CMakeLists.txt  package.xml
scripts/: aggregate_experiment_data.py  record_real_experiment.sh  record_simulation_experiment.sh
springer-nature-article/: CHECKLIST.md  EXPANSION_SUMMARY.md  PAPER_DELIVERY_SUMMARY.md  PAPER_SUMMARY.md  README_PAPER.md  SUBMISSION_CHECKLIST.md  piec_nature_paper.aux  piec_nature_paper.blg  piec_nature_paper.out  piec_nature_paper.tex  piec_references.bib
src/agriculture_gazebo/: CMakeLists.txt  package.xml
src/baylands_terrain_gazebo/: CMakeLists.txt  package.xml
src/baylands_terrain_gazebo/launch/: baylands_terrain_world.launch.py
src/baylands_terrain_gazebo/worlds/: baylands_terrain.world
src/campus_gazebo/: CMakeLists.txt  package.xml
src/gazebo_environment/: README.md
src/gazebo_environment/cpr_accessories_gazebo/: CMakeLists.txt  package.xml
src/gazebo_environment/cpr_accessories_gazebo/launch/: accessories_world.launch.py
src/gazebo_environment/cpr_accessories_gazebo/worlds/: actually_empty_world.world
src/grasspatch_gazebo/: CMakeLists.txt  package.xml
src/indoor_lightmap_gazebo/: CMakeLists.txt  package.xml
src/office_cpr_gazebo/: CMakeLists.txt  package.xml
src/piec_analysis/: DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  example_usage.py  package.xml  setup.cfg  setup.py
src/piec_analysis/data/: README.md
src/piec_analysis/data/sample_data/: localization_timeseries.csv  navigation_trials.csv  nsga_evolution.csv  pinn_test_predictions.csv  pinn_training_history.csv
src/piec_analysis/data/templates/: localization_trial_template.csv  navigation_trial_template.csv  pinn_training_template.csv
src/piec_analysis/piec_analysis/: __init__.py  ablation_analysis.py  config.yaml  data_loader.py  localization_analysis.py  navigation_analysis.py  pinn_analysis.py  statistical_tests.py  table_generator.py  visualization.py
src/piec_analysis/resource/: piec_analysis
src/piec_analysis/scripts/: generate_ablation_study.py  generate_all_results.py  generate_comparison_tables.py  generate_navigation_figures.py  generate_pinn_figures.py
src/piec_analysis/test/: test_piec_analysis.py
src/piec_bringup/: package.xml  setup.cfg  setup.py
src/piec_bringup/config/: piec_real_robot.yaml  world_configs.yaml
src/piec_bringup/piec_bringup/: controller_diagnostics.py  debug_path.py  experiment_recorder.py  test_goal_publisher.py  tf_validator.py
src/piec_bringup/piec_bringup/launch/: debug_piec.launch.py  piec_complete.launch.py  piec_complete_params.launch (copy).py  piec_complete_params.launch.py  piec_real_robot.launch (copy).py  piec_real_robot.launch.py
src/piec_bringup/scripts/: launch_piec_world.sh
src/piec_controller/: package.xml  setup.cfg  setup.py  test_controller.py
src/piec_controller/piec_controller/: __init__.py  controller_node (copy).py  controller_node.py  dwa_pinn_enhanced.py  dynamic_dwa (copy).py  dynamic_dwa.py  dynamic_dwa_complete.py  dynamic_obstacle_tracker.py  ea_reseed.py  emergency_stop.py  hybrid_planner.py  laser_bridge.py  magnetometer_converter.py  mpc_planner.py  mpc_visualizer.py  obstacle_test.py  pinn_energy.py  send_goal.py  test_planners.py
src/piec_controller/test/: test_controller_heading.py
src/piec_dynamics/: package.xml  setup.cfg  setup.py
src/piec_path_optimizer/: package.xml  setup.cfg  setup.py
src/piec_path_optimizer/config/: optimizer_params.yaml
src/piec_path_optimizer/piec_path_optimizer/: __init__.py  complete_path_optimizer (copy).py  complete_path_optimizer.py  nsga2.py  objectives.py  path_optimizer.py  uncertainty_aware.py
src/piec_pinn_surrogate/: package.xml  setup.cfg  setup.py
src/piec_pinn_surrogate_msgs/: CMakeLists.txt  package.xml  running
src/piec_ukf_localization/: package.xml  setup.cfg  setup.py
src/piec_validation/: package.xml  setup.cfg  setup.py
src/rslidar_msg/: GIT_TRACKED.md
src/simple_baylands_gazebo/: CMakeLists.txt  package.xml
src/walking_actor/: CMakeLists.txt  package.xml
thesis/: FILE_SUMMARY.md  README.md  THESIS_COMPLETION_SUMMARY.md  abstract.tex  bibliography.bib  main.tex
thesis/appendices/: appendix_a_code.tex  appendix_b_params.tex  appendix_c_data.tex
thesis/chapters/: chapter1_introduction.tex  chapter2_literature.tex  chapter3_methodology.tex  chapter4_implementation.tex  chapter5_simulation_results.tex  chapter6_experimental_results.tex  chapter7_comparison.tex  chapter8_conclusion.tex
tools/: pinn_dataset.csv  record_dataset.py
(+60 files in other folders)
