<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configurations for AgileX Scout</description>

  <maintainer email="rdu@todo.todo">rdu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 core dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- Scout specific dependencies -->
  <exec_depend>agilex_scout</exec_depend>
  <exec_depend>scout_msgs</exec_depend>
  <exec_depend>ugv_sdk</exec_depend>
  
  <!-- ROS 2 launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Optional: for Python scripts if any -->
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
