<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baylands_terrain_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo world and model for the Baylands terrain environment</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
