<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piec_analysis</name>
  <version>0.1.0</version>
  <description>Comprehensive Python package to generate all graphs, tables, and statistical analyses for PIEC thesis and paper</description>
  <maintainer email="amjad@todo.todo">Muhammad Amjad</maintainer>
  <license>Apache-2.0</license>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-seaborn</depend>
  <depend>python3-pandas</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-sklearn</depend>
  <depend>python3-yaml</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
