<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piec_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for PIEC system bringup</description>
  <maintainer email="amjad@todo.todo">amjad</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies for your launch file -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>agilex_scout</exec_depend>
  
  <!-- Dependencies on your custom packages -->
  <exec_depend>piec_ukf_localization</exec_depend>
  <exec_depend>piec_pinn_surrogate</exec_depend>
  <exec_depend>piec_path_optimizer</exec_depend>
  <exec_depend>piec_controller</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- Mark as launch package -->
    <launch_type value="launch"/>
  </export>
</package>
