<package format="3">
  <name>piec_path_optimizer</name>
  <version>0.0.0</version>
  <description>Path optimization using PINN surrogate and evolutionary algorithm</description>

  <maintainer email="amjad@todo.todo">amjad</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>piec_pinn_surrogate_msgs</depend>
  <depend>numpy</depend>   <!-- ✅ ADD THIS -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

